--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div>
     <app-navbar></app-navbar>
     <div class="container">
-        <app-login></app-login>
+        <!-- <app-login></app-login> -->
+        <br>
         <app-house></app-house>
     </div>
