--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
     <div class="container">
         <!-- <app-login></app-login> -->
         <br>
-        <app-house></app-house>
+        <app-house [myTest]="number"></app-house>
     </div>
