--- a/src/app/components/house/house.component.html
+++ b/src/app/components/house/house.component.html
@@ -1,5 +1,52 @@
+<div class="row my-4">
+    <div class="col-md-6">
+        <h3>List OF Devices</h3>
+    </div>
+    <div class="col-md-6 text-right">
+        <button (click)="showForm=!showForm" class=" btn btn-primary btn-sm">
+            <i class="fa fa-plus">
+            </i>
+            New Devices
+        </button>
+    </div>
+</div>
+
+<div class="row" *ngIf="showForm">
+    <div class="col-md-6 mx-auto my-4">
+
+        <div class="form-check my-2">
+            <label class="form-check-label">
+                <input [(ngModel)]="myDevice.status" type="checkbox" class="form-check-input">
+                Activations
+            </label>
+        </div>
+
+        <div class="form-groupe my-2">
+            <label for="name"> Divice Name</label>
+            <input placeholder="name the device" [(ngModel)]="myDevice.name" id="name" type="text" class="form-control">
+        </div>
+
+        <div class="form-groupe my-2">
+            <label for="name"> Room</label>
+            <input placeholder="in which room" [(ngModel)]="myDevice.room" id="name" type="text" class="form-control">
+        </div>
+
+        <div class="form-groupe my-2">
+            <label for="name">Floor</label>
+            <input placeholder="in which floor" [(ngModel)]="myDevice.floor" id="name" type="text" class="form-control">
+        </div>
+
+        <button *ngIf="editForm" (click)="updateDevice()" class="btn btn-warning btn-block">
+            <i class="fa fa-refresh"></i> Update task
+        </button>
+        <!-- {{myTask | json}} -->
+        <button *ngIf="!editForm" (click)="persistDevice()" class="btn btn-warning btn-block">
+            <i class="fa fa-send"></i> New Device
+        </button>
+    </div>
+</div>
+
 <table class="table table-striped">
-    <div>hrllo {{myTest}}</div>
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -18,8 +65,8 @@
                 <a class="btn btn-success" href="#"><i class="fa fa-play fa-2x" aria-hidden="true"></i></a>
             </td>
             <td>{{device.name}}</td>
-            <td>{{device.room.name}}</td>
-            <td>{{device.floor.name}}</td>
+            <td>{{device.room}}</td>
+            <td>{{device.floor}}</td>
             <td>{{device.status}}</td>
             <td>
                 <a class="btn btn-danger" href="#"><i class="fa fa-trash-o fa-lg"></i></a> |
