--- a/src/app/components/house/house.component.html
+++ b/src/app/components/house/house.component.html
@@ -45,8 +45,30 @@
         </button>
     </div>
 </div>
+<!-- Button trigger modal -->
 
-<table class="table table-striped">
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">information of 'test'</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<table class="table">
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -59,19 +81,22 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let device of devices;">
-            <th scope="row">1</th>
+        <tr *ngFor="let device of devices" [ngClass]="{'bg-success':device.status!='Of',
+        'bg-danger':device.status!='On'}">
+            <th scope="row">{{device.id}}</th>
             <td>
-                <a class="btn btn-success" href="#"><i class="fa fa-play fa-2x" aria-hidden="true"></i></a>
+                <a (click)="active(device)" class="btn" [ngClass]="{'btn-success':device.active,
+                'btn-danger':!device.active}" href="#"><i class="fa fa-2x"
+                        [ngClass]="{'fa-play':device.status,'fa-stop':!device.status}" aria-hidden="true"></i></a>
             </td>
             <td>{{device.name}}</td>
             <td>{{device.room}}</td>
             <td>{{device.floor}}</td>
             <td>{{device.status}}</td>
             <td>
-                <a class="btn btn-danger" href="#"><i class="fa fa-trash-o fa-lg"></i></a> |
+                <a (click)="confirmBox(device)" class="btn btn-danger" href="#"><i class="fa fa-trash-o fa-lg"></i></a> |
                 <a class="btn btn-warning" href="#"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a> |
-                <a class="btn btn-info" href="#">More</a>
+                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">More</button>
             </td>
         </tr>
     </tbody>
